<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/RotateLButton"
        android:layout_width="86dp"
        android:layout_height="105dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="103dp"
        android:layout_marginBottom="39dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/rotateLeft"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/LeftButton"
        app:layout_constraintEnd_toStartOf="@+id/RotateRButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewGameButton" />

    <Button
        android:id="@+id/RotateRButton"
        android:layout_width="86dp"
        android:layout_height="105dp"
        android:layout_marginStart="186dp"
        android:layout_marginLeft="186dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="46dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/rotateRight"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/RightButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/RotateLButton"
        app:layout_constraintTop_toBottomOf="@+id/NewGameButton" />

    <Button
        android:id="@+id/LeftButton"
        android:layout_width="86dp"
        android:layout_height="105dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/left"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/DownButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/DownButton"
        android:layout_width="86dp"
        android:layout_height="105dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/down"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightButton"
        app:layout_constraintStart_toEndOf="@+id/LeftButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/RightButton"
        android:layout_width="86dp"
        android:layout_height="105dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/right"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DownButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/NewGameButton"
        android:layout_width="332dp"
        android:layout_height="92dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="364dp"
        android:text="@string/newGame"
        android:textSize="40sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ScoreText"
        android:layout_width="92dp"
        android:layout_height="35dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="109dp"
        android:text="@string/scoreText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/DownButton"
        app:layout_constraintEnd_toStartOf="@+id/RotateRButton"
        app:layout_constraintStart_toEndOf="@+id/RotateLButton"
        app:layout_constraintTop_toBottomOf="@+id/NewGameButton" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="47dp"
        android:ems="10"
        android:text="@string/score"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/DownButton"
        app:layout_constraintEnd_toStartOf="@+id/RotateRButton"
        app:layout_constraintStart_toEndOf="@+id/RotateLButton"
        app:layout_constraintTop_toBottomOf="@+id/ScoreText"
        app:layout_constraintVertical_bias="1.0" />

    <GridView
        android:id="@+id/Board"
        android:layout_width="225dp"
        android:layout_height="450dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="270dp"
        android:columnWidth="22.5dp"
        android:horizontalSpacing="0dp"
        android:verticalSpacing="0dp"
        android:numColumns="10"
        app:layout_constraintBottom_toBottomOf="@+id/DownButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>